[workspace]
resolver = "3"
members = ["solutions/*"]

[workspace.dependencies]
env_logger = "0.11"
log = "0.4"
serde = "1"
serde_json = "1"
tokio = "1"

[workspace.lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = "deny"

[workspace.lints.clippy]
pedantic = "warn"
perf = "warn"
complexity = "deny"
correctness = "deny"
