[workspace]
resolver = "3"
members = ["solutions/*", "crates/*"]

[workspace.dependencies]
node = { path = "crates/node" }

tokio = "1"
rand = "0.9"
env_logger = "0.11"
log = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[workspace.lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = "deny"
unused_crate_dependencies = "deny"

[workspace.lints.clippy]
pedantic = "warn"
perf = "warn"
complexity = "deny"
correctness = "deny"
